--- a/styles/output.css
+++ b/styles/output.css
@@ -614,6 +614,11 @@ video {
   margin-right: 1.75rem;
 }
 
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .mb-11 {
   margin-bottom: 2.75rem;
 }
