--- a/styles/output.css
+++ b/styles/output.css
@@ -895,6 +895,10 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-100 {
+  transition-duration: 100ms;
+}
+
 body{
   background-color: #f6f7f8;
 }
