--- a/styles/output.css
+++ b/styles/output.css
@@ -816,43 +816,8 @@ video {
   margin-top: 2.25rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-7 {
-  margin-left: 1.75rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
-}
-
 .ml-16 {
   margin-left: 4rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.ml-17 {
-  margin-left: 4.25rem;
-}
-
-.ml-18{
-  margin-left: 4.5rem;
-}
-
-.ml-19{
-  margin-left: 4.75rem;
-}
-.ml-20{
-  margin-left: 5rem;
 }
 
 .box-border {
@@ -1002,52 +967,12 @@ video {
   max-width: 80rem;
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[90\] {
-  max-width: 90;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
-}
-
-.max-w-\[70\] {
-  max-width: 70;
-}
-
-.max-w-\[70vh\] {
-  max-width: 70vh;
-}
-
-.max-w-\[70vw\] {
-  max-width: 70vw;
-}
-
-.max-w-\[75vw\] {
-  max-width: 75vw;
-}
-
-.max-w-\[80vw\] {
-  max-width: 80vw;
-}
-
-.max-w-\[90vw\] {
-  max-width: 90vw;
-}
-
-.max-w-\[90vh\] {
-  max-width: 90vh;
-}
-
 .flex-shrink {
   flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .shrink {
@@ -2911,6 +2836,10 @@ body{
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:gap-10 {
