--- a/styles/output.css
+++ b/styles/output.css
@@ -760,10 +760,6 @@ video {
   margin-bottom: 2.75rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -818,6 +814,10 @@ video {
 
 .mt-9 {
   margin-top: 2.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .box-border {
