--- a/styles/output.css
+++ b/styles/output.css
@@ -808,6 +808,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -816,8 +820,8 @@ video {
   margin-top: 2.25rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .box-border {
